--- a/pug/_inc.pug
+++ b/pug/_inc.pug
@@ -72,11 +72,11 @@ html(lang="en")
                 .nav-close
                   i.mdi.mdi-close.d-block.d-lg-none
                 li.nav-item
-                  a(href='index.html') Trang chủ
+                  a.nav-link(href='index.html') Trang chủ
                 li.nav-item
-                  a(href='gioi-thieu.html') Giới thiệu
+                  a.nav-link(href='gioi-thieu.html') Giới thiệu
                 li.nav-item
-                  a(href='san-pham.html')
+                  a.nav-link(href='san-pham.html')
                     | Máy vệ sinh công nghiệp
                     i.mdi.mdi-chevron-down
                   .menu-down 
@@ -158,11 +158,11 @@ html(lang="en")
                           | Đĩa mài bê tông & Đĩa mài đá
 
                 li.nav-item
-                  a(href='hoa-chat-cha-san.html') Hóa chất chà sàn
+                  a.nav-link(href='hoa-chat-cha-san.html') Hóa chất chà sàn
                 li.nav-item
-                  a(href='dich-vu-ve-sinh-cong-nghiep.html') Dịch vụ vệ sinh công nghiệp
+                  a.nav-link(href='dich-vu-ve-sinh-cong-nghiep.html') Dịch vụ vệ sinh công nghiệp
                 li.nav-item
-                  a(href='lien-he.html') Liên hệ
+                  a.nav-link(href='lien-he.html') Liên hệ
               
                 
 
@@ -185,7 +185,7 @@ html(lang="en")
                       
               .col-lg-6
                 .quickview-detail
-                  h2 Logitech G502 Proteus Spectrum
+                  h3 Logitech G502 Proteus Spectrum
                   h4.price-product
                     | Giá: Liên hệ
                   h5
@@ -217,7 +217,9 @@ html(lang="en")
           .row
             .col-xl-4.col-lg-4.col-sm-6
               .contact
-                h4 thông tin liên hệ
+                h4 
+                  | thông tin liên hệ
+                  i.mdi.mdi-chevron-down
                 ul
                   li
                     i.mdi.mdi-map-outline
@@ -235,7 +237,9 @@ html(lang="en")
             
             .col-xl-2.col-lg-4.col-sm-6
               .link
-                h4 Liên kết
+                h4 
+                  | Liên kết
+                  i.mdi.mdi-chevron-down
                 ul
                   li
                     a(href='gioi-thieu.html') Giới thiệu
@@ -250,7 +254,9 @@ html(lang="en")
             
             .col-xl-3.col-lg-4.col-sm-6
               .support
-                h4 Hỗ trợ trực tuyến
+                h4 
+                  | Hỗ trợ trực tuyến
+                  i.mdi.mdi-chevron-down
                 ul
                   li
                     a(href='#')
@@ -273,7 +279,9 @@ html(lang="en")
             
             .col-xl-2.d-lg-none.col-sm-6.d-xl-block
               .statistical
-                h4 Thống kê
+                h4 
+                  | Thống kê
+                  i.mdi.mdi-chevron-down
                 
                 ul
                   li 
