--- a/view/dich-vu-ve-sinh-cong-nghiep.html
+++ b/view/dich-vu-ve-sinh-cong-nghiep.html
@@ -134,6 +134,84 @@
       </div>
     </div>
     <article>
+      <section class="bread-crumb">
+        <div class="container">
+          <div class="bc-icons">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+                <li class="breadcrumb-item active">Dịch vụ vệ sinh công nghiệp</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </section>
+      <section class="service-page">
+        <div class="container">
+          <div class="title-page">
+            <h1>dịch vụ vệ sinh công nghiệp</h1>
+          </div>
+          <div class="row">
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                  <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+            </div>
+          </div>
+          <nav>
+            <ul class="pagination justify-content-end">
+              <li class="page-item"><a class="page-link" href="#" aria-label="Previous"><span aria-hidden="true">«</span><span class="sr-only">Previous</span></a></li>
+              <li class="page-item"><a class="page-link active" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item"><a class="page-link" href="#" aria-label="Next"><span aria-hidden="true">»</span><span class="sr-only">Next </span></a></li>
+            </ul>
+          </nav>
+        </div>
+      </section>
     </article>
     <section class="footer">
       <div class="container">
