--- a/view/gioi-thieu.html
+++ b/view/gioi-thieu.html
@@ -134,6 +134,34 @@
       </div>
     </div>
     <article>
+      <section class="bread-crumb">
+        <div class="container">
+          <div class="bc-icons">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+                <li class="breadcrumb-item active">Giới thiệu</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </section>
+      <section class="page-detail">
+        <div class="container">
+          <div class="title-page">
+            <h1>Giới thiệu</h1>
+          </div>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, temporibus ullam! Blanditiis nihil sint ab et repudiandae ipsa, sed maiores earum? Id nostrum libero tempora a delectus sed at quis.</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, temporibus ullam! Blanditiis nihil sint ab et repudiandae ipsa, sed maiores earum? Id nostrum libero tempora a delectus sed at quis.</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, temporibus ullam! Blanditiis nihil sint ab et repudiandae ipsa, sed maiores earum? Id nostrum libero tempora a delectus sed at quis.</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, temporibus ullam! Blanditiis nihil sint ab et repudiandae ipsa, sed maiores earum? Id nostrum libero tempora a delectus sed at quis.</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, temporibus ullam! Blanditiis nihil sint ab et repudiandae ipsa, sed maiores earum? Id nostrum libero tempora a delectus sed at quis.</p><img src="../img/cate-1.png"/>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, temporibus ullam! Blanditiis nihil sint ab et repudiandae ipsa, sed maiores earum? Id nostrum libero tempora a delectus sed at quis.</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, temporibus ullam! Blanditiis nihil sint ab et repudiandae ipsa, sed maiores earum? Id nostrum libero tempora a delectus sed at quis.</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, temporibus ullam! Blanditiis nihil sint ab et repudiandae ipsa, sed maiores earum? Id nostrum libero tempora a delectus sed at quis.</p>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Optio, temporibus ullam! Blanditiis nihil sint ab et repudiandae ipsa, sed maiores earum? Id nostrum libero tempora a delectus sed at quis.</p>
+        </div>
+      </section>
     </article>
     <section class="footer">
       <div class="container">
