--- a/view/chi-tiet-dich-vu-ve-sinh-cong-nghiep.html
+++ b/view/chi-tiet-dich-vu-ve-sinh-cong-nghiep.html
@@ -134,6 +134,64 @@
       </div>
     </div>
     <article>
+      <section class="bread-crumb">
+        <div class="container">
+          <div class="bc-icons">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+                <li class="breadcrumb-item"><a href="index.html">Dịch vụ vệ sinh công nghiệp</a></li>
+                <li class="breadcrumb-item active">Dịch vụ lau kính</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </section>
+      <section class="page-detail">
+        <div class="container">
+          <div class="title-page">
+            <h1>Dịch vụ lau kính</h1>
+          </div>
+          <p>Công ty Vệ sinh Hoàng Gia chuyên cung cấp dịch vụ vệ sinh công nghiệp uy tín chuyên nghiệp,với đội ngũ nhân viên giàu kinh nghiệm cùng trang thiết bị hiện đại,chúng tôi luôn mang đến một dịch vụ hoàn hảo với nhiều tính năng đa dạng nhất,góp phần tô điểm trong không gian xanh sạch đẹp.</p>
+          <p>Với sự biến đổi và ô nhiễm môi trường,việc vệ sinh nhà cửa gọn gàng sạch sẽ góp phần kiến tạo một không gian trong sạch,giúp bạn cảm thấy thoải mái hơn trong bầu không khí làm việc căng thẳng...những dụng cụ gọn gàng sạch sẽ,ngắm nhìn khoảng không gian xanh đẹp,sạch sẽ luôn tạo ra tâm lý thoải mái yêu đời và làm việc hăng say hiệu quả.</p>
+          <p>Cùng với hệ thống máy móc hiện đại, đội ngũ nhân viên giàu kinh nghiệm được đào tạo bài bản và tay nghề cao,cũng như có kiến thức kỹ năng ưu việt trong việc sử dụng thành thục các loại máy móc hiện đại kết hợp với bàn tay của con người...Chúng tôi kiến tạo một dịch vụ tốt nhất làm hài lòng quý khách!</p><img src="../img/service-1.png"/>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa recusandae perferendis architecto voluptate, perspiciatis excepturi et est sint harum vel! Reprehenderit distinctio reiciendis quia nisi consequatur maxime dolore laboriosam laborum.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa recusandae perferendis architecto voluptate, perspiciatis excepturi et est sint harum vel! Reprehenderit distinctio reiciendis quia nisi consequatur maxime dolore laboriosam laborum.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa recusandae perferendis architecto voluptate, perspiciatis excepturi et est sint harum vel! Reprehenderit distinctio reiciendis quia nisi consequatur maxime dolore laboriosam laborum.</p>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa recusandae perferendis architecto voluptate, perspiciatis excepturi et est sint harum vel! Reprehenderit distinctio reiciendis quia nisi consequatur maxime dolore laboriosam laborum.</p>
+          <div class="similar">
+            <div class="title-page">
+              <h1>DỊch vụ liên quan</h1>
+            </div>
+            <div class="row">
+              <div class="col-lg-4 col-sm-6">
+                <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                    <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                    <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                    <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                    <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                    <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+              </div>
+              <div class="col-lg-4 col-sm-6">
+                <div class="box-service"><a href="chi-tiet-dich-vu-ve-sinh-cong-nghiep.html"><img src="../img/service-1.png"/>
+                    <h4 title="Dịch vụ vệ sinh công nghiệp">Dịch vụ vệ sinh công nghiệp</h4></a></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </article>
     <section class="footer">
       <div class="container">
