--- a/view/gio-hang.html
+++ b/view/gio-hang.html
@@ -57,9 +57,9 @@
           <div class="main-menu">
             <ul class="nav">
               <div class="nav-close"><i class="mdi mdi-close d-block d-lg-none"></i></div>
-              <li class="nav-item"><a href="index.html">Trang chủ</a></li>
-              <li class="nav-item"><a href="gioi-thieu.html">Giới thiệu</a></li>
-              <li class="nav-item"><a href="san-pham.html">Máy vệ sinh công nghiệp<i class="mdi mdi-chevron-down"></i></a>
+              <li class="nav-item"><a class="nav-link" href="index.html">Trang chủ</a></li>
+              <li class="nav-item"><a class="nav-link" href="gioi-thieu.html">Giới thiệu</a></li>
+              <li class="nav-item"><a class="nav-link" href="san-pham.html">Máy vệ sinh công nghiệp<i class="mdi mdi-chevron-down"></i></a>
                 <div class="menu-down"> 
                   <ul>
                     <li><a href="san-pham.html">Máy chà sàn công nghiệp</a></li>
@@ -90,9 +90,9 @@
                   </ul>
                 </div>
               </li>
-              <li class="nav-item"><a href="hoa-chat-cha-san.html">Hóa chất chà sàn</a></li>
-              <li class="nav-item"><a href="dich-vu-ve-sinh-cong-nghiep.html">Dịch vụ vệ sinh công nghiệp</a></li>
-              <li class="nav-item"><a href="lien-he.html">Liên hệ</a></li>
+              <li class="nav-item"><a class="nav-link" href="hoa-chat-cha-san.html">Hóa chất chà sàn</a></li>
+              <li class="nav-item"><a class="nav-link" href="dich-vu-ve-sinh-cong-nghiep.html">Dịch vụ vệ sinh công nghiệp</a></li>
+              <li class="nav-item"><a class="nav-link" href="lien-he.html">Liên hệ</a></li>
             </ul>
           </div>
         </div>
@@ -113,7 +113,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="quickview-detail">
-                  <h2>Logitech G502 Proteus Spectrum</h2>
+                  <h3>Logitech G502 Proteus Spectrum</h3>
                   <h4 class="price-product">Giá: Liên hệ</h4>
                   <h5>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</h5>
                   <div class="quantity"><span>Số lượng: </span>
@@ -134,110 +134,109 @@
       </div>
     </div>
     <article>
-      <article>
-        <section class="bread-crumb">
-          <div class="container">
-            <div class="bc-icons">
-              <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
-                  <li class="breadcrumb-item active">Giỏ hàng</li>
-                </ol>
-              </nav>
+      <section class="bread-crumb">
+        <div class="container">
+          <div class="bc-icons">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+                <li class="breadcrumb-item active">Giỏ hàng</li>
+              </ol>
+            </nav>
+          </div>
+        </div>
+      </section>
+      <section class="cart-page">
+        <div class="container">
+          <div class="cart-page-product">
+            <div class="table-responsive">
+              <table class="table table-bordered">
+                <thead>
+                  <tr>
+                    <th scope="col">Sản phẩm</th>
+                    <th scope="col">Giá</th>
+                    <th scope="col">Số lượng</th>
+                    <th scope="col">Thành tiền</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="cart-page-product-1"><img src="../img/product-1.png" alt=""/>
+                      <h5><a href="chi-tiet-san-pham.html">Logitech G502 Proteus Spectrum</a></h5>
+                      <div class="cart-remove"><a title="Xóa sản phẩm" href="#"><i class="mdi mdi-close"></i></a></div>
+                    </td>
+                    <td>
+                      <h4>Giá: Liên hệ</h4>
+                    </td>
+                    <td class="quantity">
+                      <button class="waves-effect waves-light">-</button>
+                      <input type="number" value="1" min="1"/>
+                      <button class="waves-effect waves-light">+</button>
+                    </td>
+                    <td class="cart-page-product-3">
+                      <h4>Giá: Liên hệ</h4>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="cart-page-product-1"><img src="../img/product-1.png" alt=""/>
+                      <h5><a href="chi-tiet-san-pham.html">Logitech G502 Proteus Spectrum</a></h5>
+                      <div class="cart-remove"><a title="Xóa sản phẩm" href="#"><i class="mdi mdi-close"></i></a></div>
+                    </td>
+                    <td>
+                      <h4>Giá: Liên hệ</h4>
+                    </td>
+                    <td class="quantity">
+                      <button class="waves-effect waves-light">-</button>
+                      <input type="number" value="1" min="1"/>
+                      <button class="waves-effect waves-light">+</button>
+                    </td>
+                    <td class="cart-page-product-3">
+                      <h4>Giá: Liên hệ</h4>
+                    </td>
+                  </tr>
+                  <tr>
+                    <td class="cart-page-product-1"><img src="../img/product-1.png" alt=""/>
+                      <h5><a href="chi-tiet-san-pham.html">Logitech G502 Proteus Spectrum</a></h5>
+                      <div class="cart-remove"><a title="Xóa sản phẩm" href="#"><i class="mdi mdi-close"></i></a></div>
+                    </td>
+                    <td>
+                      <h4>Giá: Liên hệ</h4>
+                    </td>
+                    <td class="quantity">
+                      <button class="waves-effect waves-light">-</button>
+                      <input type="number" value="1" min="1"/>
+                      <button class="waves-effect waves-light">+</button>
+                    </td>
+                    <td class="cart-page-product-3">
+                      <h4>Giá: Liên hệ</h4>
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
             </div>
           </div>
-        </section>
-        <section class="cart-page">
-          <div class="container">
-            <div class="cart-page-product">
-              <div class="table-responsive">
-                <table class="table table-bordered">
-                  <thead>
-                    <tr>
-                      <th scope="col">Sản phẩm</th>
-                      <th scope="col">Giá</th>
-                      <th scope="col">Số lượng</th>
-                      <th scope="col">Thành tiền</th>
-                    </tr>
-                  </thead>
-                  <tbody>
-                    <tr>
-                      <td class="cart-page-product-1"><img src="../img/product-1.png" alt=""/>
-                        <h5><a href="chi-tiet-san-pham.html">Logitech G502 Proteus Spectrum</a></h5>
-                        <div class="cart-remove"><a title="Xóa sản phẩm" href="#"><i class="mdi mdi-close"></i></a></div>
-                      </td>
-                      <td>
-                        <h4>Giá: Liên hệ</h4>
-                      </td>
-                      <td class="quantity">
-                        <button class="waves-effect waves-light">-</button>
-                        <input type="number" value="1" min="1"/>
-                        <button class="waves-effect waves-light">+</button>
-                      </td>
-                      <td class="cart-page-product-3">
-                        <h4>Giá: Liên hệ</h4>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="cart-page-product-1"><img src="../img/product-1.png" alt=""/>
-                        <h5><a href="chi-tiet-san-pham.html">Logitech G502 Proteus Spectrum</a></h5>
-                        <div class="cart-remove"><a title="Xóa sản phẩm" href="#"><i class="mdi mdi-close"></i></a></div>
-                      </td>
-                      <td>
-                        <h4>Giá: Liên hệ</h4>
-                      </td>
-                      <td class="quantity">
-                        <button class="waves-effect waves-light">-</button>
-                        <input type="number" value="1" min="1"/>
-                        <button class="waves-effect waves-light">+</button>
-                      </td>
-                      <td class="cart-page-product-3">
-                        <h4>Giá: Liên hệ</h4>
-                      </td>
-                    </tr>
-                    <tr>
-                      <td class="cart-page-product-1"><img src="../img/product-1.png" alt=""/>
-                        <h5><a href="chi-tiet-san-pham.html">Logitech G502 Proteus Spectrum</a></h5>
-                        <div class="cart-remove"><a title="Xóa sản phẩm" href="#"><i class="mdi mdi-close"></i></a></div>
-                      </td>
-                      <td>
-                        <h4>Giá: Liên hệ</h4>
-                      </td>
-                      <td class="quantity">
-                        <button class="waves-effect waves-light">-</button>
-                        <input type="number" value="1" min="1"/>
-                        <button class="waves-effect waves-light">+</button>
-                      </td>
-                      <td class="cart-page-product-3">
-                        <h4>Giá: Liên hệ</h4>
-                      </td>
-                    </tr>
-                  </tbody>
-                </table>
+          <div class="row">
+            <div class="col-lg-5 col-md-4 text-center text-md-left order-md-0 order-12">
+              <div class="cart-page-btn"><a href="san-pham.html"><i class="fa fa-undo" aria-hidden="true"></i>                                Tiếp tục mua sắm</a></div>
+            </div>
+            <div class="col-lg-7 order-lg-3 col-md-8">
+              <div class="cart-page-btn text-lg-right text-md-right text-center">
+                <button><a><i class="fa fa-refresh" aria-hidden="true"></i>                                    Cập nhật giỏ hàng</a></button>
+                <button><a><i class="fa fa-times" aria-hidden="true"></i>                                    Xóa giỏ hàng</a></button>
               </div>
             </div>
-            <div class="row">
-              <div class="col-lg-5 col-md-4 text-center text-md-left order-md-0 order-12">
-                <div class="cart-page-btn"><a href="san-pham.html"><i class="fa fa-undo" aria-hidden="true"></i>                                Tiếp tục mua sắm</a></div>
-              </div>
-              <div class="col-lg-7 order-lg-3 col-md-8">
-                <div class="cart-page-btn text-lg-right text-md-right text-center">
-                  <button><a><i class="fa fa-refresh" aria-hidden="true"></i>                                    Cập nhật giỏ hàng</a></button>
-                  <button><a><i class="fa fa-times" aria-hidden="true"></i>                                    Xóa giỏ hàng</a></button>
-                </div>
-              </div>
-            </div>
-            <div class="cart-page-total-btn"><a href="thanh-toan.html">tiến hành thanh toán</a></div>
           </div>
-        </section>
-      </article>
+          <div class="cart-page-total-btn"><a href="thanh-toan.html">tiến hành thanh toán</a></div>
+        </div>
+      </section>
     </article>
     <section class="footer">
       <div class="container">
         <div class="row">
           <div class="col-xl-4 col-lg-4 col-sm-6">
             <div class="contact">
-              <h4>thông tin liên hệ</h4>
+              <h4>
+                 thông tin liên hệ<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li><i class="mdi mdi-map-outline"></i>192/41 (số cũ E29 ) Nguyễn Oanh, Cư Xá Ba Son P.17, Q. Gò Vấp, Tp.HCM </li>
                 <li><i class="mdi mdi-deskphone"></i>(028) 5446.5679 - 2200.9858 - 6275.9112</li>
@@ -248,7 +247,8 @@
           </div>
           <div class="col-xl-2 col-lg-4 col-sm-6">
             <div class="link">
-              <h4>Liên kết</h4>
+              <h4>
+                 Liên kết<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li><a href="gioi-thieu.html">Giới thiệu</a></li>
                 <li><a href="san-pham.html">Máy vệ sinh công nghiệp</a></li>
@@ -260,7 +260,8 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-sm-6">
             <div class="support">
-              <h4>Hỗ trợ trực tuyến</h4>
+              <h4>
+                 Hỗ trợ trực tuyến<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li><a href="#"><img src="../img/skype.png" title="Nhấn để liên hệ"/></a>
                   <h5>hỗ trợ</h5>
@@ -279,7 +280,8 @@
           </div>
           <div class="col-xl-2 d-lg-none col-sm-6 d-xl-block">
             <div class="statistical">
-              <h4>Thống kê</h4>
+              <h4>
+                 Thống kê<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li>
                    Đang online: <span>55</span></li>
