--- a/view/lien-he.html
+++ b/view/lien-he.html
@@ -57,9 +57,9 @@
           <div class="main-menu">
             <ul class="nav">
               <div class="nav-close"><i class="mdi mdi-close d-block d-lg-none"></i></div>
-              <li class="nav-item"><a href="index.html">Trang chủ</a></li>
-              <li class="nav-item"><a href="gioi-thieu.html">Giới thiệu</a></li>
-              <li class="nav-item"><a href="san-pham.html">Máy vệ sinh công nghiệp<i class="mdi mdi-chevron-down"></i></a>
+              <li class="nav-item"><a class="nav-link" href="index.html">Trang chủ</a></li>
+              <li class="nav-item"><a class="nav-link" href="gioi-thieu.html">Giới thiệu</a></li>
+              <li class="nav-item"><a class="nav-link" href="san-pham.html">Máy vệ sinh công nghiệp<i class="mdi mdi-chevron-down"></i></a>
                 <div class="menu-down"> 
                   <ul>
                     <li><a href="san-pham.html">Máy chà sàn công nghiệp</a></li>
@@ -90,9 +90,9 @@
                   </ul>
                 </div>
               </li>
-              <li class="nav-item"><a href="hoa-chat-cha-san.html">Hóa chất chà sàn</a></li>
-              <li class="nav-item"><a href="dich-vu-ve-sinh-cong-nghiep.html">Dịch vụ vệ sinh công nghiệp</a></li>
-              <li class="nav-item"><a href="lien-he.html">Liên hệ</a></li>
+              <li class="nav-item"><a class="nav-link" href="hoa-chat-cha-san.html">Hóa chất chà sàn</a></li>
+              <li class="nav-item"><a class="nav-link" href="dich-vu-ve-sinh-cong-nghiep.html">Dịch vụ vệ sinh công nghiệp</a></li>
+              <li class="nav-item"><a class="nav-link" href="lien-he.html">Liên hệ</a></li>
             </ul>
           </div>
         </div>
@@ -113,7 +113,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="quickview-detail">
-                  <h2>Logitech G502 Proteus Spectrum</h2>
+                  <h3>Logitech G502 Proteus Spectrum</h3>
                   <h4 class="price-product">Giá: Liên hệ</h4>
                   <h5>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</h5>
                   <div class="quantity"><span>Số lượng: </span>
@@ -134,77 +134,76 @@
       </div>
     </div>
     <article>
-      <article>
-        <section class="bread-crumb">
-          <div class="container">
-            <div class="bc-icons">
-              <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
-                  <li class="breadcrumb-item active">Liên hệ</li>
-                </ol>
-              </nav>
-            </div>
+      <section class="bread-crumb">
+        <div class="container">
+          <div class="bc-icons">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+                <li class="breadcrumb-item active">Liên hệ</li>
+              </ol>
+            </nav>
           </div>
-        </section>
-        <section class="contact-page">
-          <div class="container">
-            <div class="row">
-              <div class="col-lg-8">
-                <div class="box-contact">
-                  <form action="">
-                    <div class="row">
-                      <div class="col-md-6">
-                        <div class="form-group">
-                          <label for="form-name">Họ tên:</label>
-                          <input class="form-control" id="form-name" type="text" name="name" placeholder="Nhập họ tên"/>
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="form-group">
-                          <label for="form-phone">Số điện thoại:</label>
-                          <input class="form-control" id="form-phone" type="tel" name="phone" placeholder="Nhập số điện thoại"/>
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="form-group">
-                          <label for="form-email">Email:</label>
-                          <input class="form-control" id="form-email" type="email" name="email" placeholder="Nhập Email"/>
-                        </div>
-                      </div>
-                      <div class="col-md-6">
-                        <div class="form-group">
-                          <label for="form-title">Tiêu đề:</label>
-                          <input class="form-control" id="form-title" type="text" name="title" placeholder="Nhập tiêu đề"/>
-                        </div>
-                      </div>
-                      <div class="col-md-12">
-                        <div class="form-group">
-                          <label for="form-content">Lời nhắn:</label>
-                          <textarea class="form-control" id="form-content" name="content" placeholder="Nhập lời nhắn"></textarea>
-                        </div>
+        </div>
+      </section>
+      <section class="contact-page">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-8">
+              <div class="box-contact">
+                <form action="">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="form-name">Họ tên:</label>
+                        <input class="form-control" id="form-name" type="text" name="name" placeholder="Nhập họ tên"/>
                       </div>
                     </div>
-                    <button class="btn btn-danger" type="submit"><a>gửi liên hệ</a></button>
-                  </form>
-                </div>
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="form-phone">Số điện thoại:</label>
+                        <input class="form-control" id="form-phone" type="tel" name="phone" placeholder="Nhập số điện thoại"/>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="form-email">Email:</label>
+                        <input class="form-control" id="form-email" type="email" name="email" placeholder="Nhập Email"/>
+                      </div>
+                    </div>
+                    <div class="col-md-6">
+                      <div class="form-group">
+                        <label for="form-title">Tiêu đề:</label>
+                        <input class="form-control" id="form-title" type="text" name="title" placeholder="Nhập tiêu đề"/>
+                      </div>
+                    </div>
+                    <div class="col-md-12">
+                      <div class="form-group">
+                        <label for="form-content">Lời nhắn:</label>
+                        <textarea class="form-control" id="form-content" name="content" placeholder="Nhập lời nhắn"></textarea>
+                      </div>
+                    </div>
+                  </div>
+                  <button class="btn btn-primary" type="submit"><a>gửi liên hệ</a></button>
+                </form>
               </div>
-              <div class="col-lg-4">
-                <div class="map">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3919.2830341803997!2d106.7405931152604!3d10.789620961899276!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175260bb5190f3d%3A0xd6e45b2d49c306bd!2zQ8O0bmcgVHkgVE5ISCBQaOG6p24gTeG7gW0gVHLDrSBWaeG7h3Q!5e0!3m2!1svi!2s!4v1551345364409" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen=""></iframe>
-                </div>
+            </div>
+            <div class="col-lg-4">
+              <div class="map">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.682219719884!2d106.67525431480135!3d10.835612992281416!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317528553eb77e5d%3A0x56bd7c72a29e738f!2zQ8O0bmcgSG_DoG5nIEdpYQ!5e0!3m2!1svi!2s!4v1552875870473" width="100%" height="430" frameborder="0" style="border:0" allowfullscreen=""></iframe>
               </div>
             </div>
           </div>
-        </section>
-      </article>
+        </div>
+      </section>
     </article>
     <section class="footer">
       <div class="container">
         <div class="row">
           <div class="col-xl-4 col-lg-4 col-sm-6">
             <div class="contact">
-              <h4>thông tin liên hệ</h4>
+              <h4>
+                 thông tin liên hệ<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li><i class="mdi mdi-map-outline"></i>192/41 (số cũ E29 ) Nguyễn Oanh, Cư Xá Ba Son P.17, Q. Gò Vấp, Tp.HCM </li>
                 <li><i class="mdi mdi-deskphone"></i>(028) 5446.5679 - 2200.9858 - 6275.9112</li>
@@ -215,7 +214,8 @@
           </div>
           <div class="col-xl-2 col-lg-4 col-sm-6">
             <div class="link">
-              <h4>Liên kết</h4>
+              <h4>
+                 Liên kết<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li><a href="gioi-thieu.html">Giới thiệu</a></li>
                 <li><a href="san-pham.html">Máy vệ sinh công nghiệp</a></li>
@@ -227,7 +227,8 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-sm-6">
             <div class="support">
-              <h4>Hỗ trợ trực tuyến</h4>
+              <h4>
+                 Hỗ trợ trực tuyến<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li><a href="#"><img src="../img/skype.png" title="Nhấn để liên hệ"/></a>
                   <h5>hỗ trợ</h5>
@@ -246,7 +247,8 @@
           </div>
           <div class="col-xl-2 d-lg-none col-sm-6 d-xl-block">
             <div class="statistical">
-              <h4>Thống kê</h4>
+              <h4>
+                 Thống kê<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li>
                    Đang online: <span>55</span></li>
