--- a/view/thanh-toan.html
+++ b/view/thanh-toan.html
@@ -57,9 +57,9 @@
           <div class="main-menu">
             <ul class="nav">
               <div class="nav-close"><i class="mdi mdi-close d-block d-lg-none"></i></div>
-              <li class="nav-item"><a href="index.html">Trang chủ</a></li>
-              <li class="nav-item"><a href="gioi-thieu.html">Giới thiệu</a></li>
-              <li class="nav-item"><a href="san-pham.html">Máy vệ sinh công nghiệp<i class="mdi mdi-chevron-down"></i></a>
+              <li class="nav-item"><a class="nav-link" href="index.html">Trang chủ</a></li>
+              <li class="nav-item"><a class="nav-link" href="gioi-thieu.html">Giới thiệu</a></li>
+              <li class="nav-item"><a class="nav-link" href="san-pham.html">Máy vệ sinh công nghiệp<i class="mdi mdi-chevron-down"></i></a>
                 <div class="menu-down"> 
                   <ul>
                     <li><a href="san-pham.html">Máy chà sàn công nghiệp</a></li>
@@ -90,9 +90,9 @@
                   </ul>
                 </div>
               </li>
-              <li class="nav-item"><a href="hoa-chat-cha-san.html">Hóa chất chà sàn</a></li>
-              <li class="nav-item"><a href="dich-vu-ve-sinh-cong-nghiep.html">Dịch vụ vệ sinh công nghiệp</a></li>
-              <li class="nav-item"><a href="lien-he.html">Liên hệ</a></li>
+              <li class="nav-item"><a class="nav-link" href="hoa-chat-cha-san.html">Hóa chất chà sàn</a></li>
+              <li class="nav-item"><a class="nav-link" href="dich-vu-ve-sinh-cong-nghiep.html">Dịch vụ vệ sinh công nghiệp</a></li>
+              <li class="nav-item"><a class="nav-link" href="lien-he.html">Liên hệ</a></li>
             </ul>
           </div>
         </div>
@@ -113,7 +113,7 @@
               </div>
               <div class="col-lg-6">
                 <div class="quickview-detail">
-                  <h2>Logitech G502 Proteus Spectrum</h2>
+                  <h3>Logitech G502 Proteus Spectrum</h3>
                   <h4 class="price-product">Giá: Liên hệ</h4>
                   <h5>This is Photoshop's version  of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi accumsan ipsum velit.</h5>
                   <div class="quantity"><span>Số lượng: </span>
@@ -134,141 +134,140 @@
       </div>
     </div>
     <article>
-      <article>
-        <section class="bread-crumb">
-          <div class="container">
-            <div class="bc-icons">
-              <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
-                  <li class="breadcrumb-item active">Thanh toán</li>
-                </ol>
-              </nav>
-            </div>
+      <section class="bread-crumb">
+        <div class="container">
+          <div class="bc-icons">
+            <nav aria-label="breadcrumb">
+              <ol class="breadcrumb">
+                <li class="breadcrumb-item"><a href="index.html">Trang chủ</a></li>
+                <li class="breadcrumb-item active">Thanh toán</li>
+              </ol>
+            </nav>
           </div>
-          <section class="pay-page">
-            <div class="container">
-              <form>
-                <div class="row">
-                  <div class="col-lg-4">
-                    <div class="pay-page-title">
-                      <h4>Đơn hàng</h4>
-                    </div>
-                    <div class="pay-order">
-                      <p>3 sản phẩm trong giỏ hàng</p>
-                      <div class="row">
-                        <div class="col-lg-12">
-                          <div class="box-pay-order"><img src="../img/product-1.png" alt=""/>
-                            <h5><a href="chi-tiet-san-pham.html">Cánh cửa gỗ ABC - 123</a></h5>
-                            <h5>Số lượng: 1</h5>
-                            <h4>Giá: Liên hệ</h4>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-lg-12">
-                          <div class="box-pay-order"><img src="../img/product-1.png" alt=""/>
-                            <h5><a href="chi-tiet-san-pham.html">Cánh cửa gỗ ABC - 123</a></h5>
-                            <h5>Số lượng: 1</h5>
-                            <h4>Giá: Liên hệ</h4>
-                          </div>
-                        </div>
-                      </div>
-                      <div class="row">
-                        <div class="col-lg-12">
-                          <div class="box-pay-order"><img src="../img/product-1.png" alt=""/>
-                            <h5><a href="chi-tiet-san-pham.html">Cánh cửa gỗ ABC - 123</a></h5>
-                            <h5>Số lượng: 1</h5>
-                            <h4>Giá: Liên hệ</h4>
-                          </div>
-                        </div>
+        </div>
+      </section>
+      <section class="pay-page">
+        <div class="container">
+          <form>
+            <div class="row">
+              <div class="col-lg-4">
+                <div class="pay-page-title">
+                  <h4>Đơn hàng</h4>
+                </div>
+                <div class="pay-order">
+                  <p>3 sản phẩm trong giỏ hàng</p>
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div class="box-pay-order"><img src="../img/product-1.png" alt=""/>
+                        <h5><a href="chi-tiet-san-pham.html">Cánh cửa gỗ ABC - 123</a></h5>
+                        <h5>Số lượng: 1</h5>
+                        <h4>Giá: Liên hệ</h4>
                       </div>
                     </div>
                   </div>
-                  <div class="col-lg-8 order-lg-4">
-                    <div class="pay-info">
-                      <div class="pay-page-title">
-                        <h4>Thông tin mua hàng</h4>
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div class="box-pay-order"><img src="../img/product-1.png" alt=""/>
+                        <h5><a href="chi-tiet-san-pham.html">Cánh cửa gỗ ABC - 123</a></h5>
+                        <h5>Số lượng: 1</h5>
+                        <h4>Giá: Liên hệ</h4>
                       </div>
-                      <div class="pay-info-1">
-                        <div class="row">
-                          <div class="col-md-6">
-                            <div class="form-group">
-                              <label for="name">Họ tên* :</label>
-                              <input class="form-control" id="name" type="text" placeholder="Nhập họ tên"/>
-                            </div>
-                          </div>
-                          <div class="col-md-6">
-                            <div class="form-group">
-                              <label for="city">Tỉnh / Thành* :</label>
-                              <select class="form-control" id="city">
-                                <option value="">-- Chọn tỉnh thành ---</option>
-                                <option value="">Thanh Hóa</option>
-                                <option value="">Tiểu Vương Quốc</option>
-                                <option value="">Hoa Thanh Quế</option>
-                              </select>
-                            </div>
-                          </div>
-                          <div class="col-md-6 order-6 order-md-0">
-                            <div class="form-group">
-                              <label for="email">Email* :</label>
-                              <input class="form-control" id="email" type="email" placeholder="Nhập Email"/>
-                            </div>
-                          </div>
-                          <div class="col-md-6">
-                            <div class="form-group">
-                              <label for="district">Quận / Huyện* :</label>
-                              <select class="form-control" id="district">
-                                <option value="">-- Chọn quận huyện ---</option>
-                                <option value="">Thị xã Bỉm Sơn</option>
-                                <option value="">Thị xã Sầm Sơn</option>
-                                <option value="">Huyện Đông Sơn</option>
-                                <option value="">Huyện Tĩnh Gia</option>
-                                <option value="">Huyện Hà Trung</option>
-                                <option value="">Huyện Yên Định</option>
-                                <option value="">Huyện Mường Lát</option>
-                                <option value="">Huyện Nga Sơn</option>
-                              </select>
-                            </div>
-                          </div>
-                          <div class="col-md-6">
-                            <div class="form-group">
-                              <label for="phone">Số điện thoại* :</label>
-                              <input class="form-control" id="phone" type="tel" placeholder="Nhập số điện thoại"/>
-                            </div>
-                          </div>
-                          <div class="col-md-6">
-                            <div class="form-group">
-                              <label for="address">Địa chỉ* :</label>
-                              <input class="form-control" id="address" type="text" placeholder="Nhập địa chỉ"/>
-                            </div>
-                          </div>
-                          <div class="col-md-12">
-                            <div class="form-group">
-                              <label for="content">Ghi chú* :</label>
-                              <textarea class="form-control" id="content" placeholder="Nhập ghi chú"></textarea>
-                            </div>
-                          </div>
-                        </div>
-                        <div class="pay-info-2-btn text-right"><a href="gio-hang.html"><i class="fa fa-undo" aria-hidden="true"></i>Trở về giỏ hàng</a>
-                          <button type="submit"><a class="order-btn">Đặt hàng</a></button>
-                        </div>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-lg-12">
+                      <div class="box-pay-order"><img src="../img/product-1.png" alt=""/>
+                        <h5><a href="chi-tiet-san-pham.html">Cánh cửa gỗ ABC - 123</a></h5>
+                        <h5>Số lượng: 1</h5>
+                        <h4>Giá: Liên hệ</h4>
                       </div>
                     </div>
                   </div>
                 </div>
-              </form>
+              </div>
+              <div class="col-lg-8 order-lg-4">
+                <div class="pay-info">
+                  <div class="pay-page-title">
+                    <h4>Thông tin mua hàng</h4>
+                  </div>
+                  <div class="pay-info-1">
+                    <div class="row">
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label for="name">Họ tên* :</label>
+                          <input class="form-control" id="name" type="text" placeholder="Nhập họ tên"/>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label for="city">Tỉnh / Thành* :</label>
+                          <select class="form-control" id="city">
+                            <option value="">-- Chọn tỉnh thành ---</option>
+                            <option value="">Thanh Hóa</option>
+                            <option value="">Tiểu Vương Quốc</option>
+                            <option value="">Hoa Thanh Quế</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-md-6 order-6 order-md-0">
+                        <div class="form-group">
+                          <label for="email">Email* :</label>
+                          <input class="form-control" id="email" type="email" placeholder="Nhập Email"/>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label for="district">Quận / Huyện* :</label>
+                          <select class="form-control" id="district">
+                            <option value="">-- Chọn quận huyện ---</option>
+                            <option value="">Thị xã Bỉm Sơn</option>
+                            <option value="">Thị xã Sầm Sơn</option>
+                            <option value="">Huyện Đông Sơn</option>
+                            <option value="">Huyện Tĩnh Gia</option>
+                            <option value="">Huyện Hà Trung</option>
+                            <option value="">Huyện Yên Định</option>
+                            <option value="">Huyện Mường Lát</option>
+                            <option value="">Huyện Nga Sơn</option>
+                          </select>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label for="phone">Số điện thoại* :</label>
+                          <input class="form-control" id="phone" type="tel" placeholder="Nhập số điện thoại"/>
+                        </div>
+                      </div>
+                      <div class="col-md-6">
+                        <div class="form-group">
+                          <label for="address">Địa chỉ* :</label>
+                          <input class="form-control" id="address" type="text" placeholder="Nhập địa chỉ"/>
+                        </div>
+                      </div>
+                      <div class="col-md-12">
+                        <div class="form-group">
+                          <label for="content">Ghi chú* :</label>
+                          <textarea class="form-control" id="content" placeholder="Nhập ghi chú"></textarea>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="pay-info-2-btn text-right"><a href="gio-hang.html"><i class="fa fa-undo" aria-hidden="true"></i>Trở về giỏ hàng</a>
+                      <button type="submit"><a class="order-btn">Đặt hàng</a></button>
+                    </div>
+                  </div>
+                </div>
+              </div>
             </div>
-          </section>
-        </section>
-      </article>
+          </form>
+        </div>
+      </section>
     </article>
     <section class="footer">
       <div class="container">
         <div class="row">
           <div class="col-xl-4 col-lg-4 col-sm-6">
             <div class="contact">
-              <h4>thông tin liên hệ</h4>
+              <h4>
+                 thông tin liên hệ<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li><i class="mdi mdi-map-outline"></i>192/41 (số cũ E29 ) Nguyễn Oanh, Cư Xá Ba Son P.17, Q. Gò Vấp, Tp.HCM </li>
                 <li><i class="mdi mdi-deskphone"></i>(028) 5446.5679 - 2200.9858 - 6275.9112</li>
@@ -279,7 +278,8 @@
           </div>
           <div class="col-xl-2 col-lg-4 col-sm-6">
             <div class="link">
-              <h4>Liên kết</h4>
+              <h4>
+                 Liên kết<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li><a href="gioi-thieu.html">Giới thiệu</a></li>
                 <li><a href="san-pham.html">Máy vệ sinh công nghiệp</a></li>
@@ -291,7 +291,8 @@
           </div>
           <div class="col-xl-3 col-lg-4 col-sm-6">
             <div class="support">
-              <h4>Hỗ trợ trực tuyến</h4>
+              <h4>
+                 Hỗ trợ trực tuyến<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li><a href="#"><img src="../img/skype.png" title="Nhấn để liên hệ"/></a>
                   <h5>hỗ trợ</h5>
@@ -310,7 +311,8 @@
           </div>
           <div class="col-xl-2 d-lg-none col-sm-6 d-xl-block">
             <div class="statistical">
-              <h4>Thống kê</h4>
+              <h4>
+                 Thống kê<i class="mdi mdi-chevron-down"></i></h4>
               <ul>
                 <li>
                    Đang online: <span>55</span></li>
